--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,10 @@ starknet-devnet = "starknet_devnet.server:main"
 [tool.pytest.ini_options]
 markers = [
     "account",
+    "account_predeployed",
     "call",
     "deploy",
+    "fee_token",
     "invoke",
     "restart",
     "state_update",
